Prevented name on AA page from wrapping on multiple lines

--- a/admin/assets/stylesheets/elements/_access-arrangements.scss
+++ b/admin/assets/stylesheets/elements/_access-arrangements.scss
@@ -26,6 +26,10 @@
 .access-arrangements-pupil {
   text-decoration: underline;
   width: pem(200px);
+  
+  a {
+	  white-space: nowrap;
+  }
 }
 
 .access-arrangements-list {
